Update choices to emoji and player-choice default

--- a/index.html
+++ b/index.html
@@ -13,26 +13,26 @@
 
     <div class="scores">
       <div class="message">
-        <h3 class="result-message">Choose Rock, Paper, or Scissors</h3>
-        <h3 class="result-score">First to 5 points wins!</h3>
+        <h3 id="result-message">Choose Rock, Paper, or Scissors</h3>
+        <h3 id="result-score">First to 5 points wins!</h3>
       </div>
 
       <div class="output">
-        <div data-player-choice class="player-choice">
-          8=D
-          <div class="score" id="player-score">Player: 0</div>
+        <div id="player-info">
+            <div data-player-choice class="player-choice">~</div>
+            <div class="score" id="player-score">Player: 0</div>
         </div>
+        <div id="computer-info">
         <div data-opponent-choice class="opponent-choice">
-          8=D
+          ~ </div>
           <div class="score" id="opponent-score">Opponent: 0</div>
         </div>
-      </div>
     </div>
 
     <div class="choices">
-      <button data-rock>Rock</button>
-      <button data-paper>Paper</button>
-      <button data-scissors>Scissors</button>
+      <button data-rock>🗿</button>
+      <button data-paper>🧻</button>
+      <button data-scissors>✂️</button>
     </div>
     <script src="script.js"></script>
   </body>
