Add overlay for endgame

--- a/index.html
+++ b/index.html
@@ -34,6 +34,12 @@
       <button data-paper>🧻</button>
       <button data-scissors>✂️</button>
     </div>
+
+    <div class="modal-container active">
+        <div class="modal" id="modal"></div>
+        <button class="try-again"><h2 id="try-again"> Try Again?</h2></button>
+    </div>
+    <div id="overlay"></div>
     <script src="script.js"></script>
   </body>
 </html>
