Update modal-container class and id

--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
       <button data-scissors>✂️</button>
     </div>
 
-    <div class="modal-container active">
+    <div class="modal-container">
         <div class="modal" id="modal"></div>
         <button class="try-again"><h2 id="try-again"> Try Again?</h2></button>
     </div>
-    <div id="overlay"></div>
+    <div class="overlay" id="overlay"></div>
     <script src="script.js"></script>
   </body>
 </html>
