Update try-again to play-again

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
     <div class="modal-container">
         <div class="modal" id="modal"></div>
-        <button class="try-again"><h2 id="try-again"> Try Again?</h2></button>
+        <button class="play-again"><h2 id="play-again"> Play Again?</h2></button>
     </div>
     <div class="overlay" id="overlay"></div>
     <script src="script.js"></script>
